sandbox-system/transparent-capture-injector/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transparent-capture-injector
  namespace: sandbox-system-ns-1
spec:
  selector:
    app.kubernetes.io/name: transparent-capture-injector
  ports:
    - name: https
      port: 443
      targetPort: https
