sandbox-system/transparent-capture-injector/manifests/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: transparent-capture-injector.pratiks.io
webhooks:
  - name: transparent-capture-injector.pratiks.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
    namespaceSelector:
      matchLabels:
        sandbox.pratiks.io/enabled: "true"
    clientConfig:
      service:
        namespace: sandbox-system-ns-1
        name: transparent-capture-injector
        path: /mutate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlGT3pDQ0F5T2dBd0lCQWdJVUI1MEpaVEU2RW9DTmxBSE0rdFFOaVhnUnFvOHdEUVlKS29aSWh2Y05BUUVMDQpCUUF3TkRFWU1CWUdBMVVFQXd3UFUyRnVaR0p2ZUNCU2IyOTBJRU5CTVJnd0ZnWURWUVFLREE5UWNtRjBhV3R6DQpJRk5oYm1SaWIzZ3dIaGNOTWpZd09USXpNVFl5TnpNNFdoY05Nell3T1RJd01UWXlOek00V2pBME1SZ3dGZ1lEDQpWUVFEREE5VFlXNWtZbTk0SUZKdmIzUWdRMEV4R0RBV0JnTlZCQW9NRDFCeVlYUnBhM01nVTJGdVpHSnZlRENDDQpBaUl3RFFZSktvWklodmNOQVFFQkJRQURnZ0lQQURDQ0Fnb0NnZ0lCQU43ZjhZU3ljVGw5dTFmOWtpNlJHMldNDQpoU09q [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: Namespaced
